# ai-form

./: .gitignore  LICENSE  README.md  mighty-greeting-avalanche.md
.claude/: settings.json
client/: README.md  ai表单-0.1.user.js  package-lock.json  package.json  vitest.config.js
client/src/: App.js
client/src/api/: ApiClient.js  RequestBuilder.js  ResponseParser.js  index.js
client/src/config/: ParamRegistry.js
client/src/core/: Clipboard.js  Config.js  EventBus.js  State.js  index.js
client/src/form/: FormDataExtractor.js  FormFiller.js  index.js
client/src/form/adapters/: AdapterRegistry.js  AngularAdapter.js  BaseAdapter.js  IonicAdapter.js  ReactAdapter.js  SvelteAdapter.js  VanillaAdapter.js  VueAdapter.js  WebComponentsAdapter.js  index.js
client/src/ui/: UIManager.js  index.js
client/src/ui/components/: LoadingIndicator.js  SettingsPanel.js  SuggestionsContainer.js
client/src/ui/styles/: Styles.js
client/tests/: setup.js
client/tests/adapters/: AdapterRegistry.test.js  AngularAdapter.test.js  IonicAdapter.test.js  ReactAdapter.test.js  SvelteAdapter.test.js  VueAdapter.test.js  WebComponentsAdapter.test.js
docs/: ADAPTERS.md  API_REFERENCE.md  CONFIGURATION.md  GETTING_STARTED.md  TROUBLESHOOTING.md
server/python-simple-server/: .env.example  AiServer.py  Chat.py  README.md  Roles.py  SECURITY_AUDIT_REPORT.md  auth.py  config.json  pyproject.toml  pytest.ini  requirements.txt
server/python-simple-server/config/: param_schema.yaml
server/python-simple-server/src/: __init__.py
server/python-simple-server/src/ai_form_server/: __init__.py  __main__.py  app.py  config.py  validators.py
server/python-simple-server/src/ai_form_server/auth/: __init__.py  decorators.py  jwt_handler.py
server/python-simple-server/src/ai_form_server/routes/: __init__.py  chat.py
server/python-simple-server/src/ai_form_server/services/: __init__.py  chat.py  roles.py
server/python-simple-server/src/ai_form_server/validators/: __init__.py  input.py  prompt.py  schema.py
server/python-simple-server/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_validators.py
